other/nfs-subdir-external-provisioner-storage-path/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: nfs-subdir-external-provisioner-storage-path
policies:
- ../nfs-subdir-external-provisioner-storage-path.yaml
resources:
- resource.yaml
results:
- kind: PersistentVolumeClaim
  policy: nfs-subdir-external-provisioner-storage-path
  resources:
  - badclaim
  result: fail
  rule: enforce-storage-path
- kind: PersistentVolumeClaim
  policy: nfs-subdir-external-provisioner-storage-path
  resources:
  - goodclaim
  result: pass
  rule: enforce-storage-path
